--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,9 @@ div {
     background-color: var(--secondary-color);
     margin-top: 150px;
 }
+.social-media a :hover {
+    transform: scale(1.2);
+}
 .profile {
     max-width: 700px;
     margin: 0 auto;
