--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ div {
 .about-page {
     background-color: var(--primary-color);
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-    border: solid var(--secondary-color);
+    border: solid lightgray;
     flex-direction: column;
     justify-content: center;
     align-content: center;
@@ -258,4 +258,24 @@ table, th, td {
     h1 {
         font-size: 22px;
     }
+}
+.contact-page {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 24px;
+    margin: 0 24px 0;
+    border: solid lightgrey;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+    padding: 24px 32px;
+    border-radius: 12px;
+}
+.contact-page__item {
+    width: auto;
+    min-height: auto;
+    padding: 0px 24px;
+    justify-content: center;
+}
+.contact-header {
+    display: flex;
+    justify-content: center;
 }
