Upadated Contact page for smart phone use
changed dimensions to grid template with 1fr to fit better on smart phone

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,3 +279,8 @@ table, th, td {
     display: flex;
     justify-content: center;
 }
+@media all and (max-width:750px) {
+    .contact-page {
+        grid-template-columns: 1fr;
+    }
+}
